--- a/ERP/accounting/templates/accounting/sales_invoice_form.html
+++ b/ERP/accounting/templates/accounting/sales_invoice_form.html
@@ -22,45 +22,45 @@
             {% endif %}
 
             <div class="row">
-                <div class="col-md-4 mb-3">
+                <div class="col-12 col-md-4 mb-3">
                     <label class="form-label" for="{{ form.invoice_number.id_for_label }}">Invoice Number</label>
                     {{ form.invoice_number }}
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-12 col-md-4 mb-3">
                     <label class="form-label" for="{{ form.customer.id_for_label }}">Customer</label>
                     {{ form.customer }}
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-12 col-md-4 mb-3">
                     <label class="form-label" for="{{ form.payment_term.id_for_label }}">Payment Term</label>
                     {{ form.payment_term }}
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-md-4 mb-3">
+                <div class="col-12 col-md-4 mb-3">
                     <label class="form-label" for="{{ form.invoice_date.id_for_label }}">Invoice Date</label>
                     {{ form.invoice_date }}
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-12 col-md-4 mb-3">
                     <label class="form-label" for="{{ form.due_date.id_for_label }}">Due Date</label>
                     {{ form.due_date }}
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-12 col-md-4 mb-3">
                     <label class="form-label" for="{{ form.reference_number.id_for_label }}">Reference</label>
                     {{ form.reference_number }}
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-md-4 mb-3">
+                <div class="col-12 col-md-4 mb-3">
                     <label class="form-label" for="{{ form.currency.id_for_label }}">Currency</label>
                     {{ form.currency }}
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-12 col-md-4 mb-3">
                     <label class="form-label" for="{{ form.exchange_rate.id_for_label }}">Exchange Rate</label>
                     {{ form.exchange_rate }}
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-12 col-md-4 mb-3">
                     <label class="form-label" for="{{ form.notes.id_for_label }}">Notes</label>
                     {{ form.notes }}
                 </div>
