--- a/ERP/accounting/templates/accounting/vendor_bill_form.html
+++ b/ERP/accounting/templates/accounting/vendor_bill_form.html
@@ -31,53 +31,53 @@
     <div class="card mb-3">
       <div class="card-body">
         <div class="row g-3">
-          <div class="col-md-4">
+          <div class="col-12 col-md-4">
             <label for="{{ form.vendor.id_for_label }}" class="form-label">Vendor</label>
             {{ form.vendor }}
           </div>
-          <div class="col-md-4">
+          <div class="col-12 col-md-4">
             <label for="{{ form.invoice_number.id_for_label }}" class="form-label">Invoice #</label>
             {{ form.invoice_number }}
           </div>
-          <div class="col-md-4">
+          <div class="col-12 col-md-4">
             <label for="{{ form.external_reference.id_for_label }}" class="form-label">Reference</label>
             {{ form.external_reference }}
           </div>
         </div>
         <div class="row g-3 mt-2">
-          <div class="col-md-3">
+          <div class="col-12 col-md-3">
             <label class="form-label" for="{{ form.invoice_date.id_for_label }}">Invoice Date</label>
             {{ form.invoice_date }}
           </div>
-          <div class="col-md-3">
+          <div class="col-12 col-md-3">
             <label class="form-label" for="{{ form.due_date.id_for_label }}">Due Date</label>
             {{ form.due_date }}
           </div>
-          <div class="col-md-3">
+          <div class="col-12 col-md-3">
             <label class="form-label" for="{{ form.payment_term.id_for_label }}">Payment Term</label>
             {{ form.payment_term }}
           </div>
-          <div class="col-md-3">
+          <div class="col-12 col-md-3">
             <label class="form-label" for="{{ form.currency.id_for_label }}">Currency</label>
             {{ form.currency }}
           </div>
         </div>
         <div class="row g-3 mt-2">
-          <div class="col-md-2">
+          <div class="col-12 col-md-2">
             <label class="form-label" for="{{ form.exchange_rate.id_for_label }}">Exchange Rate</label>
             {{ form.exchange_rate }}
           </div>
-          <div class="col-md-5">
+          <div class="col-12 col-md-5">
             <label class="form-label" for="{{ form.po_number.id_for_label }}">PO Number</label>
             {{ form.po_number }}
           </div>
-          <div class="col-md-5">
+          <div class="col-12 col-md-5">
             <label class="form-label" for="{{ form.receipt_reference.id_for_label }}">Receipt Ref</label>
             {{ form.receipt_reference }}
           </div>
         </div>
         <div class="row mt-3">
-          <div class="col-md-12">
+          <div class="col-12">
             <label class="form-label" for="{{ form.notes.id_for_label }}">Notes</label>
             {{ form.notes }}
           </div>
