--- a/ERP/accounting/templates/accounting/chart_of_accounts_form_enhanced.html
+++ b/ERP/accounting/templates/accounting/chart_of_accounts_form_enhanced.html
@@ -11,14 +11,18 @@
     </div>
     
     <!-- Bulk Import Tab -->
+    {% if enable_bulk_import|default:True %}
     <div class="tab-pane fade" id="bulk-import" role="tabpanel">
         {% include 'accounting/partials/coa_bulk_import_form.html' %}
     </div>
+    {% endif %}
     
     <!-- Demo Data Tab -->
+    {% if enable_templates|default:True %}
     <div class="tab-pane fade" id="demo-data" role="tabpanel">
         {% include 'accounting/partials/coa_demo_data.html' %}
     </div>
+    {% endif %}
     
 </div>
 {% endblock %}
